# mouse-linux

linux/: Makefile  mouse.c  out  read.c  reference.md  type.h  write.c
raspi/: 99-mouse.rules  CMakeLists.txt  README.md  client.cpp  common.hpp  rc.local  rc.local.client  rc.local.server  reader.hpp  reader_test.cpp  server.cpp  setup_deps.sh  setup_otg.sh  setup_serial.sh  setup_ssh.sh  ssh_config  writer.cpp  writer.hpp  writer_test.cpp
raspi/client/: 99-mouse.rules  CMakeLists.txt  client.cpp  communicator.hpp  mouse_reader.cpp  mouse_reader.hpp  mouse_reader_test.cpp  rc.local.client  reader.cpp
raspi/scripts/: .complex.sh.swp  click_left.sh  complex.sh  move_xy.sh
raspi/server/: .pattern.txt.swp  CMakeLists.txt  click_left.sh  communicator.hpp  hid.sh  mouse_writer.cpp  mouse_writer.hpp  mouse_writer_test.cpp  pattern.txt  plot.py  rc.local.server  server.cpp
